# NetChunk

./: CMakeLists.txt  LICENSE  README.md
config/: netchunk.conf.example.in
include/: chunker.h  config.h  crypto.h  ftp_client.h  logger.h  manifest.h  netchunk.h  repair.h
src/: chunker.c  config.c  crypto.c  ftp_client.c  logger.c  main.c  manifest.c  netchunk.c  repair.c
tests/: CMakeLists.txt  README.md
tests/docker/: docker-compose.yml  manage-ftp-servers.sh
tests/integration/: ftp-servers-config.conf  test_ftp_connection_debug.c  test_real_ftp_integration.c
tests/mocks/: mock_ftp.c  mock_ftp.h
tests/unit/: test_config.c  test_crypto.c
tests/utils/: test_utils.c  test_utils.h
